crates/pi-doctor-cli/tests/snapshots/milestone5_camera__doctor_camera_missing_tools.snap
---
source: crates/pi-doctor-cli/tests/milestone5_camera.rs
expression: "pi_doctor::doctor::camera::render(&ctx)"
---
pi-doctor doctor camera
Verdict: userspace tools missing
  tool used: none
  available tools: none
  video devices: none detected

Inventory
  No cameras detected by the available camera tool.

Why this verdict
  Camera userspace tools are missing.
  Neither `rpicam-hello` nor `libcamera-hello` appears to be available, so pi-doctor cannot query camera inventory.
